syntax = "proto3";

package heist;
option go_package = "./proto";

service MissionService {
  rpc StartDistraction (DistractionRequest) returns (DistractionResponse);
  rpc StartGolpe (GolpeRequest) returns (GolpeResponse);
  rpc CheckStatus (StatusRequest) returns (StatusResponse);
  rpc GetFinalLoot (LootRequest) returns (LootResponse);
  rpc ReceivePayment (PaymentRequest) returns (PaymentResponse); // Add this
}

service LesterService {
  rpc GetOffer (OfferRequest) returns (OfferResponse);
  rpc ConfirmDecision (DecisionRequest) returns (DecisionResponse);
  rpc SendFinalReport (FinalReport) returns (ReportResponse);
  rpc ReceivePayment (PaymentRequest) returns (PaymentResponse); // Add this
}

service NotificationService {
  rpc StartStarNotifications (StarRequest) returns (StarResponse);
  rpc StopStarNotifications (StopRequest) returns (StopResponse);
}

message PaymentRequest {
  int32 amount = 1;
}

message PaymentResponse {
  string message = 1;
  bool correct_amount = 2;
}

message OfferRequest {
  string requester = 1;
}

message OfferResponse {
  bool has_offer = 1;
  int32 loot = 2;
  int32 success_franklin = 3;
  int32 success_trevor = 4;
  int32 police_risk = 5;
}

message DecisionRequest {
  string requester = 1;
  bool accepted = 2;
}

message DecisionResponse {
  string message = 1;
}

message StarRequest {
  string character = 1;
  int32 police_risk = 2;
}

message StarResponse {
  bool success = 1;
}

message StopRequest {
  string character = 1;
}

message StopResponse {
  bool success = 1;
}

message DistractionRequest {
  int32 required_turns = 1;
  string assigned_character = 2;
}

message DistractionResponse {
  bool success = 1;
  string message = 2;
}

message GolpeRequest {
  int32 required_turns = 1;
  string assigned_character = 2;
  int32 police_risk = 3;
   int32 base_loot = 4;
}

message GolpeResponse {
  bool success = 1;
  string message = 2;
}

message StatusRequest {
  string character = 1;
}

message StatusResponse {
  string status = 1;
  // "waiting", "working", "success", "failed"
  int32 turns_completed = 2;
  int32 total_turns = 3;
  int32 current_stars = 4;
  int32 extra_loot = 5;
}

message LootRequest {
  string character = 1;
}

message LootResponse {
  int32 final_loot = 1;
}

message FinalReport {
  string mission_outcome = 1; // "success" or "failed"
  int32 total_loot = 2;
  int32 michael_share = 3;
  int32 franklin_share = 4;
  int32 trevor_share = 5;
  int32 lester_share = 6;
  string error_message = 7;
  string character_failed = 8;
}

message ReportResponse {
  string message = 1;
}
